--- a/textbook_selling_app/pubspec.yaml
+++ b/textbook_selling_app/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   riverpod: ^2.5.1
   flutter_riverpod: ^2.5.1
   image_picker: ^1.1.2
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  firebase_storage: ^12.3.3
+  cloud_firestore: ^5.4.4
 
 dev_dependencies:
   flutter_test:
