--- a/textbook_selling_app/pubspec.yaml
+++ b/textbook_selling_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^5.3.1
   firebase_storage: ^12.3.3
   cloud_firestore: ^5.4.4
+  firebase_database: ^11.1.4
 
 dev_dependencies:
   flutter_test:
