--- a/textbook_selling_app/pubspec.yaml
+++ b/textbook_selling_app/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   firebase_storage: ^12.3.3
   cloud_firestore: ^5.4.4
   firebase_database: ^11.1.4
+  flutter_localization: ^0.2.2
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +78,8 @@ flutter:
      - lib/core/assets/images/register_image.png
      - lib/core/assets/images/loader_animation.gif
      - lib/core/assets/country_codes.json
+     - lib/core/localization/langs/en.json
+     - lib/core/localization/langs/sr.json
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
