--- a/textbook_selling_app/pubspec.yaml
+++ b/textbook_selling_app/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
     sdk: flutter
   intl: any
   shared_preferences: ^2.3.2
+  flutter_cache_manager: ^3.4.1
 
 dev_dependencies:
   flutter_test:
