--- a/textbook_selling_app/android/app/src/main/AndroidManifest.xml
+++ b/textbook_selling_app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="textbook_selling_app"
+        android:label="Book Cycle"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
